--- a/system/templates/news.back_button.html.twig
+++ b/system/templates/news.back_button.html.twig
@@ -1,13 +1,14 @@
 <div style="text-align:center">
-	<table cellspacing="0" cellpadding="0" border="0">
-		<form method="post" action="{{ getLink('news/archive') }}">
-			<tbody>
-				<tr>
-					<td>
-						<input width="120" height="18" border="0" type="image" src="{{ template_path }}/images/global/buttons/sbutton_back.gif" alt="Back" name="Back" />
-					</td>
-				</tr>
-			</tbody>
-		</form>
-	</table>
+  <table cellspacing="0" cellpadding="0" border="0">
+    <form method="post" action="{{ getLink('news/archive') }}">
+      <tbody>
+      <tr>
+        <td>
+          {% set button_name = 'Back' %}
+          {{ include('buttons.base.html.twig') }}
+        </td>
+      </tr>
+      </tbody>
+    </form>
+  </table>
 </div>
