Small fixes on myaac.

--- a/system/templates/account.change_info.html.twig
+++ b/system/templates/account.change_info.html.twig
@@ -31,6 +31,12 @@ Here you can tell other players about yourself. This information will be display
 									<input name="info_location" value="{{ account_location }}" size="30" maxlength="50" >
 								</td>
 							</tr>
+							<tr>
+								<td class="LabelV" >Phone:</td>
+								<td>
+									<input name="info_phone" value="{{ account_phone }}" size="15" maxlength="11">
+								</td>
+							</tr>
 							{% if config.account_country %}
 							<tr>
 								<td class="LabelV" >Country:</td>
