Fixed admin save account functions and other improvements.

--- a/admin/pages/modules/templates/points.html.twig
+++ b/admin/pages/modules/templates/points.html.twig
@@ -10,7 +10,7 @@
 					<tr>
 						<th>#</th>
 						<th>Account {{ account_type }}</th>
-						<th>Premium points</th>
+						<th>Points</th>
 					</tr>
 					{% set i = 0 %}
 					{% for result in points %}
