--- a/system/templates/admin.dashboard.html.twig
+++ b/system/templates/admin.dashboard.html.twig
@@ -61,7 +61,7 @@
 		<div class="col-md-3">
 			<div class="box">
 				<div class="box-header">
-					<h3 class="box-title">Top 10 - Most premium points</h3>
+					<h3 class="box-title">Top 10 - Most points</h3>
 					<div class="box-tools float-end">
 						<button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
 						</button>
@@ -73,7 +73,7 @@
 						<tr>
 							<th>#</th>
 							<th>Account {{ account_type }}</th>
-							<th>Premium points</th>
+							<th>Points</th>
 						</tr>
 						{% set i = 0 %}
 						{% for result in points %}
