--- a/admin/pages/modules/templates/coins.html.twig
+++ b/admin/pages/modules/templates/coins.html.twig
@@ -1,29 +1,29 @@
-{% if coins is iterable %}
-	<div class="col-md-3">
-		<div class="box">
-			<div class="box-header">
-				<h3 class="box-title">Top 10 - Most coins</h3>
-			</div>
-			<div class="box-body no-padding">
-				<table class="table table-condensed">
-					<tbody>
-					<tr>
-						<th>#</th>
-						<th>Account {{ account_type }}</th>
-						<th>Tibia coins</th>
-					</tr>
-					{% set i = 0 %}
-					{% for result in coins %}
-						{% set i = i + 1 %}
-						<tr>
-							<td>{{ i }}</td>
-							<td>{{ result.name }}</td>
-							<td>{{ result.coins }}</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
+{% if result is iterable %}
+  <div class="col-md-3">
+    <div class="box">
+      <div class="box-header">
+        <h3 class="box-title">Top 10 - Most coins</h3>
+      </div>
+      <div class="box-body no-padding">
+        <table class="table table-condensed">
+          <tbody>
+          <tr>
+            <th>#</th>
+            <th>Account {{ account_type }}</th>
+            <th>Tibia coins</th>
+          </tr>
+          {% set i = 0 %}
+          {% for item in result %}
+            {% set i = i + 1 %}
+            <tr>
+              <td>{{ i }}</td>
+              <td>{{ item.name }}</td>
+              <td>{{ item.coins }}</td>
+            </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 {% endif %}
