--- a/system/templates/account.change_name.html.twig
+++ b/system/templates/account.change_name.html.twig
@@ -1,6 +1,5 @@
 To change a name of character select player and choose a new name.<br/>
-<span
-  style="color: red">Change name cost {{ config.account_change_character_name_points }} premium points. You have {{ points }} premium points.</span>
+<span style="color: {{ color }}">Change name cost {{ config.account_change_character_name_coins }} {{ coin_type }}. You have {{ coins }} {{ coin_type }}.</span>
 <br/><br/>
 <form action="{{ getLink('account/character/name') }}" method="post">
   <input type="hidden" name="changenamesave" value="1">
