--- a/system/templates/account.change_sex.html.twig
+++ b/system/templates/account.change_sex.html.twig
@@ -1,18 +1,16 @@
 To change a sex of character select player and choose a new sex.<br/>
-<span style="color: {{ color }}">Change sex cost {{ config.account_change_character_sex_coins }} {{ coin_type }}. You have {{ coins }} {{ coin_type }}.</span>
-<br/><br/>
-<span>Change sex cost: {{ config.account_change_character_sex_points }} coins.</span><br>
+<span>Change sex cost: <b>{{ config.account_change_character_sex_coins }} {{ coin_name }}</b>.</span><br/>
 <span>
   Coins Balance:
-  {% if points > 0 %}
-    <span style="color: green; font-weight: bold">{{ points }} coins
-         {% if points < config.account_change_character_sex_points %}
-           <span style="color: red; font-weight: normal"> (you do not have coins enough,
+  {% if coins > 0 %}
+    <span style="color: green; font-weight: bold">{{ coins }} {{ coin_name }}
+         {% if coins < config.account_change_character_sex_coins %}
+           <span style="color: red; font-weight: normal"> (you do not have {{ coin_name }} enough,
                  <a href="?points" target="_blank">donate</a> now)</span>
          {% endif %}
       </span>
   {% else %}
-    <span style="color: red; font-weight: bold">You do not have coins, <a href="?points" target="_blank">donate</a> now</span>
+    <span style="color: red; font-weight: bold">You do not have {{ coin_name }}, <a href="?points" target="_blank">donate</a> now</span>
   {% endif %}
 </span>
 <br/><br/>
