--- a/system/templates/account.change_name.html.twig
+++ b/system/templates/account.change_name.html.twig
@@ -1,18 +1,16 @@
 To change a name of character select player and choose a new name.<br/>
-<span style="color: {{ color }}">Change name cost {{ config.account_change_character_name_coins }} {{ coin_type }}. You have {{ coins }} {{ coin_type }}.</span>
-<br/><br/>
-<span>Change name cost: {{ config.account_change_character_name_points }} coins.</span><br>
+<span>Change name cost: <b>{{ config.account_change_character_name_coins }} {{ coin_name }}</b>.</span><br/>
 <span>
   Coins Balance:
-  {% if points > 0 %}
-    <span style="color: green; font-weight: bold">{{ points }} coins
-         {% if points < config.account_change_character_name_points %}
-           <span style="color: red; font-weight: normal"> (you do not have coins enough,
+  {% if coins > 0 %}
+    <span style="color: green; font-weight: bold">{{ coins }} {{ coin_name }}
+      {% if coins < config.account_change_character_name_coins %}
+        <span style="color: red; font-weight: normal"> (you do not have {{ coin_name }} enough,
                  <a href="?points" target="_blank">donate</a> now)</span>
-         {% endif %}
+      {% endif %}
       </span>
   {% else %}
-    <span style="color: red; font-weight: bold">You do not have coins,
+    <span style="color: red; font-weight: bold">You do not have {{ coin_name }},
   <a href="?points" target="_blank">donate</a> now</span>
   {% endif %}
 </span>
