--- a/system/templates/admin.login.html.twig
+++ b/system/templates/admin.login.html.twig
@@ -24,7 +24,7 @@
 			</div>
 			<input type="hidden" name="admin" value="1"/>
 			<button type="submit" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-			<p class="mt-5 mb-3 text-muted">MyAAC v<?= MYAAC_VERSION ?></p>
+			<p class="mt-5 mb-3 text-muted">MyAAC v{{ myaac_version }}</p>
 		</main>
 		</form>
 	</div>
