--- a/system/templates/serverinfo.html.twig
+++ b/system/templates/serverinfo.html.twig
@@ -224,8 +224,7 @@
 																<tr bgcolor="#F1E0C6"><td><b>BlackSkull Duration: </b> {{ blackSkullLength }} days</td></tr>
 															{% endif %}
 															{% if dayKillsToRedSkull is defined %}
-																<li>Kills to red skull: <b>{{ config.lua.dayKillsToRedSkull }}</b></li>
-															{%  elseif config.lua.dayKillsToRedSkull is defined or config.lua.kills_per_day_red_skull is defined %}
+																<li>Kills to red skull: <b>{{ dayKillsToRedSkull }}</b></li>
 																
 																	<h3>Red skull</h3>
 																	<ul>
@@ -249,7 +248,6 @@
 																		</ul>
 																	{% endif %}
 																
-															{% endif %}
 															{% if banishmentLength %}
 																<li>Banishment length: <b>{{ banishmentLength }} days</b></li>
 															{% endif %}
