added config 'account_welcome_mail_show_pass' and created function to send the password in welcome mail. indented the code.

--- a/system/templates/account.welcome_mail.html.twig
+++ b/system/templates/account.welcome_mail.html.twig
@@ -3,5 +3,7 @@
 <br/><br/>
 Your login details:
 <p>Account {% if constant('USE_ACCOUNT_NAME') %}name{% else %}number{% endif %}: <b>{{ account }}</b></p>
-<p>Password: <b>************</b> (hidden for security reasons)</p>
+<p>Password: {% if config.account_welcome_mail_show_pass %}<b>{{ password }}</b>
+  {% else %}<b>************</b> (hidden for security reasons){% endif %}
+</p>
 <p>Kind Regards,</p>
