dashboard: Adjusted columns size of boxes in dash.

--- a/admin/pages/modules/templates/coins.html.twig
+++ b/admin/pages/modules/templates/coins.html.twig
@@ -1,5 +1,5 @@
 {% if result is iterable %}
-  <div class="col-md-3">
+  <div class="col-4">
     <div class="box">
       <div class="box-header">
         <h3 class="box-title">Top 10 - Most coins</h3>
