--- a/admin/pages/modules/templates/lastlogin.html.twig
+++ b/admin/pages/modules/templates/lastlogin.html.twig
@@ -1,5 +1,5 @@
 {% if players is iterable %}
-  <div class="col-md-3">
+  <div class="col-4">
     <div class="box">
       <div class="box-header">
         <h3 class="box-title">Last 10 Logins</h3>
