--- a/system/templates/admin.dashboard.html.twig
+++ b/system/templates/admin.dashboard.html.twig
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-10 col-12">
     <div class="box box-warning">
       <div class="box-header with-border">
         <h3 class="box-title">Maintenance</h3>
