Fix display ban info on account page

--- a/templates/tibiacom/account.management.html.twig
+++ b/templates/tibiacom/account.management.html.twig
@@ -5,7 +5,7 @@
         <img src="{{ template_path }}/images/content/headline-bracer-left.gif"/>
       </td>
       <td
-        style="text-align:center;vertical-align:middle;horizontal-align:center;font-size:17px;font-weight:bold;">{{ welcome_message }}
+        style="text-align:center;vertical-align:middle;horizontal-align:center;font-size:17px;font-weight:bold;">{{ welcome_message|raw }}
       </td>
       <td><img src="{{ template_path }}/images/content/headline-bracer-right.gif"/></td>
     </tr>
