--- a/system/templates/characters.html.twig
+++ b/system/templates/characters.html.twig
@@ -115,7 +115,7 @@
                               <td class="LabelV175">Balance:</td>
                               <td>
                                 <strong style="color: green">$</strong>
-                                {% if not player.isHidden() %} {{ player.getBalance() }} Gold Coins.
+                                {% if not player.isHidden() %} {{ balance }} Gold Coins.
                                 {% else %} <strike>Hidden</strike> {% endif %}
                               </td>
                             </tr>
@@ -686,35 +686,13 @@
                         {% set i = i + 1 %}
                         {% set rows = rows + 1 %}
                         <tr bgcolor="{{ getStyle(rows) }}">
-                          {% if achievement.grade == 1 %}
-                            <td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                     alt="Tibia Achievement"></td>
-                          {% endif %}
-                          {% if achievement.grade == 2 %}
-                            <td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                     alt="Tibia Achievement"><img
-                                src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                alt="Tibia Achievement"></td>
-                          {% endif %}
-                          {% if achievement.grade == 3 %}
-                            <td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                     alt="Tibia Achievement"><img
-                                src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                alt="Tibia Achievement"><img
-                                src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                alt="Tibia Achievement"></td>
-                          {% endif %}
-                          {% if achievement.grade == 4 %}
-                            <td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                     alt="Tibia Achievement"><img
-                                src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                alt="Tibia Achievement"><img
-                                src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                alt="Tibia Achievement"><img
-                                src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
-                                alt="Tibia Achievement"></td>
-                          {% endif %}
-                          <td style="width: 75%;">
+                          <td style="width: 100px">
+                            {% for i in 1..achievement.grade %}
+                              <img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif"
+                                   alt="Tibia Achievement">
+                            {% endfor %}
+                          </td>
+                          <td>
                             {{ achievement.name }}
                             {% if achievement.secret == 1 %}
                               <img class="SecretAchievementIcon"
