pagseguro: incluiu funcionalidades do pagseguro ao myaac. (criou tela de donate e de venda de boxes). trocou url points para donate.

--- a/admin/pages/modules/templates/coinstransferable.html.twig
+++ b/admin/pages/modules/templates/coinstransferable.html.twig
@@ -10,7 +10,7 @@
           <tr>
             <th>#</th>
             <th>Account {{ account_type }}</th>
-            <th>Points</th>
+            <th>Coins</th>
           </tr>
           {% set i = 0 %}
           {% for item in result %}
