--- a/templates/tibiacom/account.management.html.twig
+++ b/templates/tibiacom/account.management.html.twig
@@ -65,11 +65,11 @@
                         {% endautoescape %}
                         </span>
                         <small><br>{{ account_expire_time[0] }} {% if account_expire_time[1] %}
-                            (<a href="?points">donate now</a>) {% endif %}</small>
+                            (<a href="?donate">donate now</a>) {% endif %}</small>
                       </td>
                       <td>
                         {% if config.gifts_system %}
-                          <a href="?points" target="blank">
+                          <a href="?donate" target="blank">
                             <div class="BigButton"
                                  style="background-image:url({{ template_path }}/images/global/buttons/sbutton_green.gif)">
                               <div onmouseover="MouseOverBigButton('GetCoinsButton');" onmouseout="MouseOutBigButton('GetCoinsButton');">
