--- a/system/templates/account.change_main.html.twig
+++ b/system/templates/account.change_main.html.twig
@@ -6,12 +6,12 @@ Select a main character and submit.<br/>
     <span style="color: green; font-weight: bold">{{ coins }} {{ coin_name }}
       {% if coins < config.account_change_character_main_coins %}
         <span style="color: red; font-weight: normal"> (you do not have {{ coin_name }} enough,
-                 <a href="?points" target="_blank">donate</a> now)</span>
+                 <a href="?donate" target="_blank">donate</a> now)</span>
       {% endif %}
       </span>
   {% else %}
     <span style="color: red; font-weight: bold">You do not have {{ coin_name }},
-  <a href="?points" target="_blank">donate</a> now</span>
+  <a href="?donate" target="_blank">donate</a> now</span>
   {% endif %}
 </span>
 <br><br>
