--- a/system/templates/account.change_sex.html.twig
+++ b/system/templates/account.change_sex.html.twig
@@ -6,11 +6,11 @@ To change a sex of character select player and choose a new sex.<br/>
     <span style="color: green; font-weight: bold">{{ coins }} {{ coin_name }}
          {% if coins < config.account_change_character_sex_coins %}
            <span style="color: red; font-weight: normal"> (you do not have {{ coin_name }} enough,
-                 <a href="?points" target="_blank">donate</a> now)</span>
+                 <a href="?donate" target="_blank">donate</a> now)</span>
          {% endif %}
       </span>
   {% else %}
-    <span style="color: red; font-weight: bold">You do not have {{ coin_name }}, <a href="?points" target="_blank">donate</a> now</span>
+    <span style="color: red; font-weight: bold">You do not have {{ coin_name }}, <a href="?donate" target="_blank">donate</a> now</span>
   {% endif %}
 </span>
 <br/><br/>
