--- a/system/templates/guilds.view.html.twig
+++ b/system/templates/guilds.view.html.twig
@@ -52,7 +52,7 @@
                 <table style="width:100%;">
                   <tbody>
                   <tr>
-                    <td>
+                    <td style="word-break: break-all">
                       <div id="GuildInformationContainer">
                         {% if description is not empty %}
                           {{ description|raw }}
