--- a/system/templates/admin.statistics.html.twig
+++ b/system/templates/admin.statistics.html.twig
@@ -52,15 +52,17 @@
       </div>
     </div>
   </div>
-  <div class="col-md-3 col-sm-6 col-xs-12">
-    <a href="?p=pag_transactions">
-      <div class="info-box">
-        <span class="info-box-icon bg-green-gradient"><i class="fa-solid fa-money-bill"></i></span>
-        <div class="info-box-content">
-          <span class="info-box-text">Total donates:</span>
-          <span class="info-box-number">{{ total_donates }}</span>
+  {% if total_donates is not null %}
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <a href="?p=pag_transactions">
+        <div class="info-box">
+          <span class="info-box-icon bg-green-gradient"><i class="fa-solid fa-money-bill"></i></span>
+          <div class="info-box-content">
+            <span class="info-box-text">Total donates:</span>
+            <span class="info-box-number">{{ total_donates }}</span>
+          </div>
         </div>
-      </div>
-    </a>
-  </div>
+      </a>
+    </div>
+  {% endif %}
 </div>
