--- a/templates/tibiacom/account.management.html.twig
+++ b/templates/tibiacom/account.management.html.twig
@@ -2,15 +2,24 @@
   <table style="margin-left: auto; margin-right: auto;">
     <tr>
       <td>
-        <img src="{{ template_path }}/images/content/headline-bracer-left.gif"/>
+        <img src="{{ template_path }}/images/content/headline-bracer-left.gif" />
       </td>
       <td
         style="text-align:center;vertical-align:middle;horizontal-align:center;font-size:17px;font-weight:bold;">{{ welcome_message|raw }}
       </td>
-      <td><img src="{{ template_path }}/images/content/headline-bracer-right.gif"/></td>
+      <td><img src="{{ template_path }}/images/content/headline-bracer-right.gif" /></td>
     </tr>
   </table>
-  <br/>
+  {% if verify_message is not empty %}
+    <table style="margin: 7px auto 1px auto">
+      <tr>
+        <td
+          style="text-align:center;vertical-align:middle;horizontal-align:center;font-size:20px;font-weight:bold;">{{ verify_message|raw }}
+        </td>
+      </tr>
+    </table>
+  {% endif %}
+  <br />
 </div>
 <div class="TableContainer">
   <div class="CaptionContainer">
@@ -72,7 +81,8 @@
                           <a href="?donate" target="blank">
                             <div class="BigButton"
                                  style="background-image:url({{ template_path }}/images/global/buttons/sbutton_green.gif)">
-                              <div onmouseover="MouseOverBigButton('GetCoinsButton');" onmouseout="MouseOutBigButton('GetCoinsButton');">
+                              <div onmouseover="MouseOverBigButton('GetCoinsButton');"
+                                   onmouseout="MouseOutBigButton('GetCoinsButton');">
                                 <div id="GetCoinsButton" class="BigButtonOver"
                                      style="background-image:url({{ template_path }}/images/global/buttons/sbutton_green_over.gif); visibility: hidden;"></div>
                                 <input class="BigButtonText" type="submit" value="Get Coins"></div>
@@ -251,13 +261,13 @@
            style="background-image:url({{ template_path }}/images/content/box-frame-edge.gif);"></div>
     </div>
   </div>
-  <br/>
+  <br />
 {% endif %}
 
 <div class="TopButtonContainer">
   <div class="TopButton">
     <a href="#top">
-      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif"/>
+      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif" />
     </a>
   </div>
 </div>
@@ -474,13 +484,13 @@
            style="background-image:url({{ template_path }}/images/content/box-frame-edge.gif);"></div>
     </div>
   </div>
-  <br/>
+  <br />
 {% endif %}
 <a name="General+Information"></a>
 <div class="TopButtonContainer">
   <div class="TopButton">
     <a href="#top">
-      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif"/>
+      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif" />
     </a>
   </div>
 </div>
@@ -542,7 +552,7 @@
                         <tr style="background-color: {{ config.darkborder }};">
                           <td class="LabelV">Tibia Coins:</td>
                           <td>{{ account_coins }} <img src="{{ template_path }}/images/account/icon-tibiacoin.png"
-                                                       class="VSCCoinImages"/>
+                                                       class="VSCCoinImages" />
                             (Including: {{ account_coins_transferable }} <img
                               src="{{ template_path }}/images/account/icon-tibiacointrusted.png"
                               class="VSCCoinImages">)
@@ -584,7 +594,7 @@
                         <form action="{{ getLink('account/email') }}" method="post">
                           <tr>
                             <td style="border:0px;">
-                              <input type="hidden" name="newemail" value=""/>
+                              <input type="hidden" name="newemail" value="" />
                               <input type="hidden" name="newemaildate" value="0">
                               {{ include('buttons.change_email.html.twig') }}
                             </td>
@@ -618,13 +628,13 @@
   </table>
 </div>
 
-<br/>
+<br />
 
 <a name="Public+Information"></a>
 <div class="TopButtonContainer">
   <div class="TopButton">
     <a href="#top">
-      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif"/>
+      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif" />
     </a>
   </div>
 </div>
@@ -708,13 +718,13 @@
     </tr>
   </table>
 </div>
-<br/>
+<br />
 
 <a name="Account+Logs"></a>
 <div class="TopButtonContainer">
   <div class="TopButton">
     <a href="#top">
-      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif"/>
+      <img style="border:0px;" src="{{ template_path }}/images/content/back-to-top.gif" />
     </a>
   </div>
 </div>
