--- a/system/templates/account.generate_new_recovery_key.html.twig
+++ b/system/templates/account.generate_new_recovery_key.html.twig
@@ -1,6 +1,21 @@
 To generate new recovery key for your account please enter your password.<br/>
-<span style="color: {{ color }}"><b>New recovery key cost {{ config.generate_new_reckey_price }} {{ coin_type }}.</b> You have {{ coins }} {{ coin_type }}. You will receive e-mail with this recovery key.</span>
+<span>New recovery key cost: <b>{{ config.generate_new_reckey_price }} {{ coin_name }}</b>. You will receive e-mail with this recovery key.</span><br/>
+<span>
+  Coins Balance:
+  {% if coins > 0 %}
+    <span style="color: green; font-weight: bold">{{ coins }} {{ coin_name }}
+      {% if coins < config.account_change_character_name_coins %}
+        <span style="color: red; font-weight: normal"> (you do not have {{ coin_name }} enough,
+                 <a href="?donate" target="_blank">donate</a> now)</span>
+      {% endif %}
+      </span>
+  {% else %}
+    <span style="color: red; font-weight: bold">You do not have {{ coin_name }},
+  <a href="?donate" target="_blank">donate</a> now</span>
+  {% endif %}
+</span>
 <br/><br/>
+
 <form action="{{ getLink('account/register/new') }}" method="post">
   <input type="hidden" name="registeraccountsave" value="1">
   <div class="TableContainer">
